[package]
name = "light_garden"
version = "0.2.0"
authors = ["sphereflow <johannprescher@gmx.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.29"
rayon = "1.5"
wgpu = { version = "0.14", features = ["webgl"]}
bytemuck = { version = "1.4", features = ["derive"] }
log = "0.4"
chrono = "0.4"
egui = { git = "https://github.com/emilk/egui" }
eframe = { git = "https://github.com/emilk/egui" }
egui-wgpu = { git = "https://github.com/emilk/egui", features = ["winit"] }
egui-winit = { git = "https://github.com/emilk/egui", default-features = false}
winit = "0.27"
cgmath = "0.17"
instant = "0.1"
image = "0.23"
half = "1.8"
serde = { version = "1.0.130", features = ["derive"]}
ron = "0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-executor = "1.0"
pollster = "0.2"
env_logger = "0.8"
rfd = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.31"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
web-sys = "0.3.60"
js-sys = "0.3.60"

[dependencies.collision2d]
git = "https://github.com/sphereflow/collision2d"

# for local development
# [patch."https://github.com/sphereflow/collision2d"]
# collision2d = { path = "../collision2d" }
