[package]
name = "light_garden"
version = "0.2.0"
authors = ["sphereflow <johannprescher@gmx.de>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.33"
rayon = "1.5"
wgpu = { version = "27", features = ["webgl"] }
bytemuck = { version = "1.4", features = ["derive"] }
log = "0.4"
chrono = "0.4"
egui = "0.33"
eframe = "0.33"
egui-wgpu = "0.33"
egui-winit = { version = "0.33", default-features = false, features = [
  "wayland",
  "x11",
  "links",
  "accesskit",
] }
winit = "0.30"
cgmath = "0.18"
web-time = "1.1.0"
image = "0.25"
half = "2.6"
serde = { version = "1.0.130", features = ["derive"] }
ron = "0.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-executor = "1.0"
pollster = "0.4"
env_logger = "0.11"
rfd = "0.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
console_log = "1"
web-sys = "0.3.77"
js-sys = "0.3.77"

[dependencies.collision2d]
git = "https://github.com/sphereflow/collision2d"

# for local development
# [patch."https://github.com/sphereflow/collision2d"]
# collision2d = { path = "../collision2d" }
